# recsys2026

./: .gitignore  README.md  RESULTS.md  pyproject.toml
cpp/: source_budget_beam.cpp
docs/: BEGINNER_PROJECT_LOG.md  BEGINNER_PROJECT_LOG_CHRONOLOGY.md  COARSE_RECALL_FRAMEWORK_PLAN.md  NEXTGEN_SHADOW_ADMISSION_RESTRUCTURE.md  SOURCE_BUDGET_SEARCH.md  SUBMISSION_DECISION.md  SYSTEM_REPORT.md
goalflow/: __init__.py  bm25_retrieval.py  data.py  documents.py  embeddings.py  fusion.py  pipeline.py  response.py  state.py  validation.py
research/: DEEP_RESEARCH_BACKLOG.md  FRAMEWORK_RESEARCH_BRIEF.md
scripts/: analyze_budget_choice_misses.py  analyze_missed_gold_deep_dive.py  analyze_shadow_admission_pool.py  analyze_source_overlap_budget.py  analyze_source_topk_curves.py  apply_consensus_fallback.py  apply_embedding_tail_rescue.py  audit_progress_labels.py  audit_response_text.py  augment_rerank_features_v3.py  blend_response_predictions.py  build_nextgen_candidate_pool.py  build_rerank_v2_diagnostics.py  build_rerank_v2_feature_cache.py  compare_candidate_pools_same_ltr.py  derive_capped_nextgen_cache.py  diagnose_candidate_pool_gold.py  diagnose_nextgen_family_gold.py  diagnose_nextgen_rerank_delta.py  diagnose_retrieval_sources.py  ensemble_predictions.py  ensemble_rank_predictions.py  evaluate_blind_like.py  evaluate_capped_recall_pool.py  evaluate_official.py  evaluate_recall_pool.py  export_ltr_dataset.py  export_source_candidate_matrix.py  final_freeze_audit.py  hash_predictions.py  inspect_embeddings.py  merge_legacy_head.py  probe_case_neighbors.py  (+15 more)
(+61 files in other folders)
